# my-website

./: .__env  .__env.sample  .gitignore  Cargo.toml  Dioxus.toml  README.md  docker-compose.yml  input.css  package-lock.json  package.json  tailwind.config.js
.github/workflows/: deploy.yml
assets/: left.png:Zone.Identifier  main.css  right.png:Zone.Identifier  tailwind.css
core/: Cargo.toml
core/src/: lib.rs  util.rs
core/src/services/: blog_post_service.rs  mod.rs
manager/: Cargo.toml  input.css
manager/assets/: main.css  tailwind.css
manager/src/: api_calls.rs  main.rs  prelude.rs  site_router.rs
manager/src/components/: alert.rs  layout.rs  messages_table.rs  mod.rs  navbar.rs  paginator.rs  posts_table.rs  view_message_modal.rs
manager/src/models/: mod.rs
manager/src/pages/: add_post.rs  home.rs  messages.rs  mod.rs  posts.rs  update_category.rs  update_posts.rs
postupdater/: Cargo.toml  Dioxus.toml
postupdater/assets/: tailwind.css
postupdater/src/: main.rs  prelude.rs  site_router.rs
postupdater/src/components/: mod.rs
postupdater/src/pages/: mod.rs
server/: Cargo.toml  Dockerfile  my-website-info.toml  my-website-info.toml.sample
server/src/: db.rs  error.rs  main.rs  middleware_handler.rs  prelude.rs  util.rs
server/src/handlers/: blog_handler.rs  category_handler.rs  message_handler.rs  mod.rs  website_info_handler.rs
server/src/models/: blog.rs  blog_schema.rs  category_schema.rs  message_schema.rs  mod.rs  querys.rs  website_info_schema.rs
src/: main.rs  prelude.rs  site_router.rs
src/components/: carousel.rs  hero_content.rs  latest_blog.rs  latest_projects.rs  layout.rs  mod.rs  navbar.rs  paginator.rs
src/pages/: about.rs  blog.rs  blogpost.rs  contact.rs  home.rs  mod.rs
ui/: Cargo.toml  Dioxus.toml  Dockerfile  README.md  input.css  sample.md  temp.html
ui/assets/: briefcase.png:Zone.Identifier  main.css  tailwind.css
ui/src/: main.rs  prelude.rs  site_router.rs  util.rs
ui/src/components/: carousel.rs  footer.rs  hero_content.rs  latest_blog.rs  latest_projects.rs  layout.rs  mod.rs  modal.rs  navbar.rs  paginator.rs
ui/src/models/: dtos.rs
ui/src/pages/: about.rs  blog.rs  blogpost.rs  contact.rs  home.rs
ui/src/services/: api_calls.rs  mod.rs
