[package]
name = "postupdater"
version = "0.1.0"
authors = ["tor"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
gloo-timers = "0.3.0"
pulldown-cmark = "0.12.2"
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.217"
tokio = { version = "1.43.0", features = ["time"]}
web-sys = { version = "0.3.77", features = ["Storage"]}

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
