[package]
name = "postupdater"
version = "0.1.0"
authors = ["tor"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.217"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
