[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
dotenv = "0.15.0"
pulldown-cmark = "0.12.2"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
surrealdb = "2.1.4"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"]}
validator = "0.19.0"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1
