[package]
name = "my-website"
version = "0.1.0"
authors = ["saent-x <torsxperience@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.39"
dioxus = { version = "0.6.1", features = ["router"] }
dotenvy = "0.15.7"
dotenvy_macro = "=0.15.7"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
reqwest = { version = "0.12.11", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
web-sys = { version = "0.3.76", features = ["Storage"]}

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1
